# DifferentialDriver

./: .gitignore  .gitmodules  README.md
autostart/: pigpiod.service
ros_ws/src/cliff_sensor/: package.xml  setup.cfg  setup.py
ros_ws/src/cliff_sensor/cliff_sensor/: main.py
ros_ws/src/cliff_sensor_cpp/: CMakeLists.txt  package.xml
ros_ws/src/cliff_sensor_cpp/src/: cliff_sensor_cpp.cpp
ros_ws/src/image_detector_cpp/: CMakeLists.txt  package.xml
ros_ws/src/image_detector_cpp/include/image_detector_cpp/: image_detector_cpp.hpp  train_face_recognition_cpp.hpp
ros_ws/src/image_detector_cpp/src/: generate_marker.cpp  image_detector_cpp.cpp  train_face_recognition_cpp.cpp
ros_ws/src/imu/: package.xml  setup.py
ros_ws/src/imu/imu/: main.py
ros_ws/src/imu_cpp/: CMakeLists.txt  package.xml
ros_ws/src/imu_cpp/src/: imu_cpp.cpp
ros_ws/src/interfaces/: CMakeLists.txt  package.xml
ros_ws/src/interfaces/srv/: LabelFace.srv
ros_ws/src/lidar/src/: demo.cpp
ros_ws/src/motors_driver/: package.xml  setup.cfg  setup.py
ros_ws/src/motors_driver/motors_driver/: main.py
ros_ws/src/motors_driver_cpp/: CMakeLists.txt  package.xml
ros_ws/src/motors_driver_cpp/src/: motors_driver_cpp.cpp
ros_ws/src/odometry/: package.xml  setup.py
ros_ws/src/odometry/odometry/: main.py
ros_ws/src/odometry_cpp/: CMakeLists.txt  package.xml
ros_ws/src/odometry_cpp/src/: odometry_cpp.cpp
ros_ws/src/robot_urdf/: package.xml  setup.py
ros_ws/src/robot_urdf/launch/: launch.py
ros_ws/src/robot_urdf/meshes/: imu.stl  wheel.stl
ros_ws/src/robot_urdf/rviz/: config.rviz
ros_ws/src/robot_urdf/urdf_model/: robot.urdf
ros_ws/src/screen/: package.xml  setup.cfg  setup.py
ros_ws/src/screen/screen/: main.py
ros_ws/src/twist_to_wheels_speed/: package.xml  setup.cfg  setup.py
ros_ws/src/twist_to_wheels_speed/twist_to_wheels_speed/: main.py
ros_ws/src/twist_to_wheels_speed_cpp/: CMakeLists.txt  package.xml
ros_ws/src/ultrasonic_sensor/: package.xml  setup.py
ros_ws/src/ultrasonic_sensor_cpp/: CMakeLists.txt  package.xml
ros_ws/src/wheels_speed_to_twist/: package.xml  setup.cfg  setup.py
ros_ws/startup/: package.xml  setup.py
ros_ws/startup/config/: camera.yaml  camera_calibration.yaml  ekf.yaml  joy.yaml  nav2_params.yaml  slam.yaml  twist_joy.yaml  twist_keyboard.yaml  twist_mux.yaml
ros_ws/startup/launch/: camera_calibration_launch.py  composition_launch.py  launch.py  rviz_launch.py
ros_ws/startup/rviz/: config.rviz
(+12 files in other folders)
